syntax = "proto3";

option java_package = "org.lwl.netty.message.protobuf";
option java_outer_classname = "Tail";

message TailP {
    int32 checkSum=1;
}